# oss

./: Cargo.toml  changelog.md
crates/ossws/: Cargo.toml
crates/ossws-analyzer/: Cargo.toml
crates/ossws-analyzer/src/: definitions.rs  lib.rs  types.rs
crates/ossws-core/: Cargo.toml
crates/ossws-core/src/: definitions.rs  lib.rs  types.rs
crates/ossws/src/: definitions.rs  main.rs  types.rs
crates/ossws/src/commands/: analyze.rs  changelog.rs  check.rs  commit.rs  git.rs  mod.rs  phase.rs
docs/: changelog-guide.md  cli-guide.md  commit-guide.md
skills/oss-ws/: skill.md
skills/oss-ws/agents/: openai.yml
skills/oss-ws/evals/: changelog.yml  evals.json
skills/oss-ws/rules/: changelog-items.md  changelog.md  cli.md  commit-message.md  commit.md  noise.md  phase-workflow.md  references.md
skills/oss-ws/rules/changelog/: agent-workflow.md  change-items.md  file-format.md  noise.md  references.md  release-entry.md
specs/: oss-changelog.md  oss-cli.md  oss-commit.md
src/: main.rs
