[workspace]
members = [
    "crates/ossws",
    "crates/ossws-analyzer",
    "crates/ossws-core",
]
resolver = "2"

[workspace.package]
version = "0.1.0-draft"
edition = "2021"
license = "MIT"

[workspace.dependencies]
clap = { version = "4.5.40", features = ["derive"] }
ossws-analyzer = { path = "crates/ossws-analyzer" }
ossws-core = { path = "crates/ossws-core" }
